# Homework

./: .gitattributes  .gitignore  Clucter_for_cars.ipynb  app.py
Algorithm_2/: CMakeLists.txt
Algorithm_2/Homework_1/: task_1.cpp  task_2.cpp  task_3.cpp
Algorithm_2/Homework_1/task_4/: task_4.cpp
Linux/: README.md  script1.sh
Linux/HW1/: script.sh  script1  script1.sh  script2.sh  script3.sh
Linux/HW2/: script2.sh  script4.sh
Python/: README.md
Python/_09_11/: 1.3.32.py  1.3.40.py  1.3.41.py  1.3.42.py  1.3.43.py
Python/_09_18/: 1.4.21.py  1.4.28.py  1.4.31.py  1.4.36.py  1.4.39.py
Python/_09_25/: 2.1.23.py  2.1.24.py  2.1.29.py  2.1.31.py  2.1.35.py
Python/_10_02/: ifs.py
Python/_10_02/Dog/: color.py  dog.py  stdarray.py  stddraw.py
Python/_10_02/Snake/: main.py
Python/_10_02/Snake/object/: apple.py
Python/_10_09/: 2.3.19.py  2.3.21.py  canibal.py  fractal_tree.py  galon.py
Python/_10_09/Snake/: game.py  main.py
Python/_10_16/ImageViewer/: app.py  config.py  gui.py  imager.py  paths.py
Python/_10_23/: 3.2.28.py  elements.csv
Python/_11_13/: app.py  tools.py
Python/_11_27/TopSimularMovies/: load.py
_10_01/snake/object/: snake.py
