cmake_minimum_required (VERSION 3.8)

set(CMAKE_CXX_STANDARD 17)

project(Homework)

add_executable(task-1.1 Homework_1/task_1.cpp)

add_executable(task-1.2 Homework_1/task_2.cpp)

add_executable(task-1.3 Homework_1/task_3.cpp)

add_executable(task-1.4 Homework_1/task_4.cpp)

add_executable(task-1.5 Homework_1/task_5.cpp)

add_executable(task-1.6 Homework_1/task_6.cpp)